//
//  SFSymbols.swift
//  News
//
//  Created by Ярослав Куприянов on 13.10.2025.
//

import SwiftUI

public enum SFSymbols: String {
    case heart
    case sparkles = "sparkles"
    case heartFill = "heart.fill"
    case starFill = "star.fill"
    case trash
    case trashFill = "trash.fill"
    case lightbulbMax = "lightbulb.max"
    case gear
    case squareAndArrowUp = "square.and.arrow.up"
    case info
    case photo
    case hourglass
    case listBullet = "list.bullet"
    case musicNote = "music.note"
    case gearshape
    case gearshapeFill = "gearshape.fill"
    case checkmarkSealFill = "checkmark.seal.fill"
    case checkmarkSeal = "checkmark.seal"
    case chevronDown = "chevron.down"
    case chevronUp = "chevron.up"
    case iphoneGen1RadiowavesLeftAndRight = "iphone.gen1.radiowaves.left.and.right"
    case figureOutdoorCycle = "figure.outdoor.cycle"
    case atom
    case gamecontrollerFill = "gamecontroller.fill"
    case boltHeart = "bolt.heart"
    case listClipboard = "list.clipboard"
    case play
    case brainFilledHeadProfile = "brain.filled.head.profile"
    case powersleep
    case catFill = "cat.fill"
    case paperplaneFill = "paperplane.fill"
    case infoCircleFill = "info.circle.fill"
    case safari
    case documentOnDocument = "document.on.document"
    case lightMax = "light.max"
    case globe
    case speakerWave3Fill = "speaker.wave.3.fill"
    case thermometerSunFill = "thermometer.sun.fill"
    case magnifyingGlass = "magnifyingglass"
    case xmarkCircleFill = "xmark.circle.fill"
}
